# colortwist

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
buildintel/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  COLORTWIST.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
buildintel/lib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  cmake_install.cmake  colortwist_config.h  libcolortwist.sln  libcolortwist.vcxproj  libcolortwist.vcxproj.filters
buildintel/lib/libcolortwist.dir/Debug/libcolortwist.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  libcolortwist.lastbuildstate
buildintel/lib/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
buildintel/lib/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
buildintel/test/: cmake_install.cmake  testcolortwist.vcxproj  testcolortwist.vcxproj.filters
buildintel/test/testcolortwist.dir/Debug/: testcolortwist.exe.recipe
buildintel/test/testcolortwist.dir/Debug/testcolortwist.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  testcolortwist.lastbuildstate
buildintel/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
buildintel/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  ZERO_CHECK.lastbuildstate
cmakemodules/: FindIPP.cmake
cmakemodules/checks/: canuse_vcvtnq_u32_f32_intrinsic.cpp  cpu_neon.cpp
lib/: CMakeLists.txt  colortwist.cpp  colortwist.h  colortwist_avx.cpp  colortwist_avx.h  colortwist_c.cpp  colortwist_c.h  colortwist_config.h  colortwist_config.h.in  colortwist_ipp.cpp  colortwist_ipp.h  colortwist_neon.cpp  colortwist_neon.h  colortwist_sse.cpp  colortwist_sse.h  loHiBytePackUnpack.cpp  loHiBytePackUnpack.h  loHiBytePackUnpack_avx.cpp  loHiBytePackUnpack_neon.cpp  utils.cpp  utils.h
test/: CMakeLists.txt  testcolortwist.cpp
unittests/: CMakeLists.txt  colortwist_tests.cpp
